📝 Fix instance init

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -56,6 +56,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "!lamin init --storage ./test-facs --schema bionty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "tags": []
    },
    "outputs": [],
