📝 Add pip install for guides

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/analysis-flow.ipynb)\n",
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Fanalysis-flow.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/analysis-flow.ipynb)"
    ]
   },
   {
@@ -30,6 +29,16 @@
    "metadata": {},
    "source": [
     "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install the `lamindb` Python package:\n",
+    "```shell\n",
+    "pip install 'lamindb[jupyter,bionty]'\n",
+    "```"
    ]
   },
   {
