--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -65,6 +65,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install the `lamindb` Python package:\n",
+    "```shell\n",
+    "pip install 'lamindb[jupyter,bionty,aws]'\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
