--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/OWuTtS4SAponz8)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/OWuTtS4SApon5zKv/1p2uQHNQJvGmld3ZarEQ)"
    ]
   },
   {
@@ -50,6 +50,16 @@
    "metadata": {},
    "source": [
     "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install the `lamindb` Python package:\n",
+    "```shell\n",
+    "pip install 'lamindb[jupyter,bionty]'\n",
+    "```"
    ]
   },
   {
