🚚 Rename Annotate to Curate

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -224,7 +224,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(\n",
+    "annotate = ln.Curate.from_anndata(\n",
     "    adata_subset.to_memory(), \n",
     "    var_index=bt.Gene.ensembl_gene_id, \n",
     "    categoricals={\n",
