--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "annotate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
     "annotate.validate()"
    ]
   },
