--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "annotate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
     "annotate.validate()"
    ]
   },
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotate with more labels:"
+    "Curate with more labels:"
    ]
   },
   {
