--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_mudata(\n",
+    "annotate = ln.Curate.from_mudata(\n",
     "    mdata,\n",
     "    var_index={\n",
     "        \"rna\": bt.Gene.symbol, # gene expression\n",
