--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -157,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
+    "annotate = ln.Curate.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
    ]
   },
   {
