🚚 Rename annotate to curate

--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fetch GO pathways annotated with human genes using Enrichr"
+    "## Fetch GO pathways curated with human genes using Enrichr"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To register the pathways we make use of `.from_values` to directly parse the annotated GO pathway ontology IDs into LaminDB."
+    "To register the pathways we make use of `.from_values` to directly parse the curated GO pathway ontology IDs into LaminDB."
    ]
   },
   {
