--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register: data & annotate with metadata ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register: data & curate with metadata ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
@@ -439,8 +439,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
-    "annotate.validate()"
+    "curate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "curate.validate()"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"Alpert19\")"
+    "artifact = curate.save_artifact(description=\"Alpert19\")"
    ]
   },
   {
