--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -157,7 +157,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate = ln.Curate.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
+    "curate = ln.Curate.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.add_new_from('sample')"
+    "curate.add_new_from('sample')"
    ]
   },
   {
@@ -184,14 +184,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register annotated artifact"
+    "## Register curated artifact"
    ]
   },
   {
@@ -204,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact_ad = annotate.save_artifact(description=\"Suo22 Visium10X image F121_LP1_4LIV\")"
+    "artifact_ad = curate.save_artifact(description=\"Suo22 Visium10X image F121_LP1_4LIV\")"
    ]
   },
   {
