--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -13,7 +13,7 @@
     "For more information, see:\n",
     "- {doc}`docs:public-ontologies`\n",
     "- {doc}`docs:bio-registries`\n",
-    "- {doc}`docs:annotate`\n",
+    "- {doc}`docs:curate`\n",
     "- {doc}`docs:scrna`"
    ]
   },
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = celltypist.annotate(\n",
+    "predictions = celltypist.curate(\n",
     "    adata, model=\"Immune_All_Low.pkl\", majority_voting=True\n",
     ")\n",
     "adata.obs[\"cell_type_celltypist\"] = predictions.predicted_labels.majority_voting"
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register analyzed dataset and annotate with metadata"
+    "## Register analyzed dataset and curate with metadata"
    ]
   },
   {
@@ -509,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Querying for all artifacts annotated with a cell type:"
+    "Querying for all artifacts curated with a cell type:"
    ]
   },
   {
