--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = celltypist.curate(\n",
+    "predictions = celltypist.annotate(\n",
     "    adata, model=\"Immune_All_Low.pkl\", majority_voting=True\n",
     ")\n",
     "adata.obs[\"cell_type_celltypist\"] = predictions.predicted_labels.majority_voting"
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register analyzed dataset and curate with metadata"
+    "## Annotate & save dataset"
    ]
   },
   {
