--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Curate with more labels:"
+    "Annotate with more labels:"
    ]
   },
   {
