--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -26,16 +26,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -45,6 +35,7 @@
    },
    "outputs": [],
    "source": [
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./test-multimodal --schema bionty"
    ]
   },
