🚚 Rename `Annotate` to `Curate` (#133)

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -224,7 +224,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(\n",
+    "curate = ln.Curate.from_anndata(\n",
     "    adata_subset.to_memory(), \n",
     "    var_index=bt.Gene.ensembl_gene_id, \n",
     "    categoricals={\n",
@@ -235,7 +235,7 @@
     "    organism=\"human\"\n",
     ")\n",
     "\n",
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
@@ -248,7 +248,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"anndata with obs subset\")"
+    "artifact = curate.save_artifact(description=\"anndata with obs subset\")"
    ]
   },
   {
