--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -276,8 +276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
-    "annotate.validate()"
+    "curate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "curate.validate()"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"Oetjen18_t1\")"
+    "artifact = curate.save_artifact(description=\"Oetjen18_t1\")"
    ]
   },
   {
