--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -26,16 +26,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -45,6 +35,7 @@
    },
    "outputs": [],
    "source": [
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./test-multimodal --schema bionty"
    ]
   },
@@ -89,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_mudata(\n",
+    "curate = ln.Curate.from_mudata(\n",
     "    mdata,\n",
     "    var_index={\n",
     "        \"rna\": bt.Gene.symbol, # gene expression\n",
@@ -117,17 +108,17 @@
    "outputs": [],
    "source": [
     "# add new gene symbols from the ['rna'].var.index\n",
-    "annotate.add_new_from_var_index(\"rna\")\n",
+    "curate.add_new_from_var_index(\"rna\")\n",
     "\n",
     "# add new categories from the hto and gdo var.index\n",
-    "annotate.add_new_from_var_index(\"hto\")\n",
-    "annotate.add_new_from_var_index(\"gdo\")\n",
+    "curate.add_new_from_var_index(\"hto\")\n",
+    "curate.add_new_from_var_index(\"gdo\")\n",
     "\n",
-    "# optional: register additional columns we'd like to annotate\n",
-    "annotate.add_new_from_columns(modality=\"rna\")\n",
-    "annotate.add_new_from_columns(modality=\"adt\")\n",
-    "annotate.add_new_from_columns(modality=\"hto\")\n",
-    "annotate.add_new_from_columns(modality=\"gdo\")"
+    "# optional: register additional columns we'd like to curate\n",
+    "curate.add_new_from_columns(modality=\"rna\")\n",
+    "curate.add_new_from_columns(modality=\"adt\")\n",
+    "curate.add_new_from_columns(modality=\"hto\")\n",
+    "curate.add_new_from_columns(modality=\"gdo\")"
    ]
   },
   {
@@ -140,7 +131,7 @@
    },
    "outputs": [],
    "source": [
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
@@ -154,9 +145,9 @@
    "outputs": [],
    "source": [
     "# add validated and new categories\n",
-    "annotate.add_new_from(\"perturbation\")\n",
-    "annotate.add_new_from(\"replicate\")\n",
-    "annotate.add_validated_from(\"technique\", modality=\"hto\")"
+    "curate.add_new_from(\"perturbation\")\n",
+    "curate.add_new_from(\"replicate\")\n",
+    "curate.add_validated_from(\"technique\", modality=\"hto\")"
    ]
   },
   {
@@ -169,14 +160,14 @@
    },
    "outputs": [],
    "source": [
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register annotated artifact"
+    "## Register curated artifact"
    ]
   },
   {
@@ -189,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"Sub-sampled MuData from Papalexi21\")"
+    "artifact = curate.save_artifact(description=\"Sub-sampled MuData from Papalexi21\")"
    ]
   },
   {
