--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -46,23 +46,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -72,6 +55,7 @@
    },
    "outputs": [],
    "source": [
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./test-facs --schema bionty"
    ]
   },
@@ -430,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register: data & annotate with metadata ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register: save & annotate with metadata ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
@@ -439,8 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
-    "annotate.validate()"
+    "curate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "curate.validate()"
    ]
   },
   {
@@ -449,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"Alpert19\")"
+    "artifact = curate.save_artifact(description=\"Alpert19\")"
    ]
   },
   {
@@ -476,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspect the registered artifact"
+    "## Inspect the saved artifact"
    ]
   },
   {
@@ -524,15 +508,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = artifact.features[\"var\"].lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "markers = artifact.features[\"var\"].lookup()\n",
     "markers.cd14"
    ]
   },
