--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~bionty.core.BioRegistry.public`, which chooses a default public ontology source from {class}`~docs:bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/bionty.dev.publicontology) object, which you can think about as a public registry:"
+    "Let us create a public ontology accessor with {meth}`~bionty.core.BioRecord.public`, which chooses a default public ontology source from {class}`~docs:bionty.PublicSource`. It's a [PublicOntology](https://lamin.ai/docs/bionty.dev.publicontology) object, which you can think about as a public registry:"
    ]
   },
   {
