--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = artifact.backed()\n",
+    "adata = artifact.open()\n",
     "adata"
    ]
   },
