--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -476,7 +476,7 @@
    "source": [
     ":::{dropdown} When does an artifact appear as a run input?\n",
     "\n",
-    "When accessing an artifact via `cache()`, `load()` or `backed()`, two things happen:\n",
+    "When accessing an artifact via `cache()`, `load()` or `open()`, two things happen:\n",
     "\n",
     "1. The current run gets added to `artifact.input_of`\n",
     "2. The transform of that artifact gets added as a parent of the current transform\n",
