💚 Remove parents keyword

--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "pathway_records = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id)\n",
-    "ln.save(pathway_records, parents=False)  # not recursing through parents"
+    "ln.save(pathway_records)"
    ]
   },
   {
