🚚 Rename PublicSource to Source

--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.PublicSource.filter(entity=\"CellMarker\").df()"
+    "bt.Source.filter(entity=\"CellMarker\").df()"
    ]
   },
   {
@@ -377,10 +377,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public_source = bt.PublicSource.filter(\n",
+    "source = bt.Source.filter(\n",
     "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
-    "public = bt.CellMarker.public(public_source=public_source)\n",
+    "public = bt.CellMarker.public(source=source)\n",
     "public"
    ]
   },
@@ -401,7 +401,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.PublicSource.filter(currently_used=True).df()"
+    "bt.Source.filter(currently_used=True).df()"
    ]
   }
  ],
