--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -25,23 +25,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -51,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "# a lamindb instance containing Bionty schema\n",
+    "# pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./analysis-usecase --schema bionty"
    ]
   },
@@ -63,9 +46,7 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "from lamin_utils import logger\n",
-    "\n",
-    "bt.settings.auto_save_parents = False"
+    "from lamin_utils import logger"
    ]
   },
   {
@@ -382,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   },
   "nbproject": {
    "id": "eNef4Arw8nNM",
