--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -30,24 +30,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -57,6 +39,7 @@
    },
    "outputs": [],
    "source": [
+    "# pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin load use-cases-registries"
    ]
   },
@@ -610,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   },
   "nbproject": {
    "id": "s5mkN5NQ1ttI",
