--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -28,24 +28,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -55,6 +37,7 @@
    },
    "outputs": [],
    "source": [
+    "# pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./use-cases-registries --schema bionty"
    ]
   },
@@ -347,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
