--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   },
   "nbproject": {
    "id": "SmQmhrhigFPL",
