--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -358,10 +358,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "bt.CellMarker.list_source()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Source.filter(entity=\"CellMarker\").df()"
+    "# only lists the sources that are currently used\n",
+    "bt.CellMarker.list_source(currently_used=True).df()"
    ]
   },
   {
@@ -378,7 +392,7 @@
    "outputs": [],
    "source": [
     "source = bt.Source.filter(\n",
-    "    source=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
+    "    name=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
     ").one()\n",
     "public = bt.CellMarker.public(source=source)\n",
     "public"
