--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -354,7 +354,7 @@
     "    record = public_records_dict[row[\"ontology_id\"]]\n",
     "    try:\n",
     "        record.add_synonym(row[\"ct_name\"])\n",
-    "    except SystemExit:\n",
+    "    except ValueError:\n",
     "        pass"
    ]
   },
