--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -423,7 +423,7 @@
    "outputs": [],
    "source": [
     "transform = ln.Transform.search(\"Project flow\").first()\n",
-    "transform.parents.df()"
+    ".transform.predecessors.df()"
    ]
   },
   {
