--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -423,7 +423,7 @@
    "outputs": [],
    "source": [
     "transform = ln.Transform.search(\"Project flow\").first()\n",
-    ".transform.predecessors.df()"
+    "transform.predecessors.df()"
    ]
   },
   {
@@ -663,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "1LCd8kco9lZU",
