--- a/docs/rdf-sparql.ipynb
+++ b/docs/rdf-sparql.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[aws,bionty]'\n",
+    "# !pip install 'lamindb[aws,bionty]'\n",
     "!lamin load laminlabs/cellxgene"
    ]
   },
