--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./analysis-usecase --schema bionty"
    ]
   },
@@ -363,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "eNef4Arw8nNM",
