--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage test-bulkrna --schema bionty"
    ]
   },
@@ -489,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "s5V0dNMVwL9i",
