--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./use-cases-registries --schema bionty"
    ]
   },
@@ -330,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
