--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,bionty]'\n",
     "!lamin init --storage ./test-spatial --schema bionty"
    ]
   },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "dependency": null,
