--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -51,30 +51,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Init a test instance:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,bionty,aws]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -84,6 +60,7 @@
    },
    "outputs": [],
    "source": [
+    "# !pip install 'lamindb[jupyter,bionty,aws]'\n",
     "!lamin init --storage ./mydata"
    ]
   },
@@ -423,7 +400,7 @@
    "outputs": [],
    "source": [
     "transform = ln.Transform.search(\"Project flow\").first()\n",
-    "transform.parents.df()"
+    "transform.predecessors.df()"
    ]
   },
   {
@@ -432,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform.view_parents()"
+    "transform.view_lineage()"
    ]
   },
   {
@@ -663,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "1LCd8kco9lZU",
