--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -433,6 +433,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "curate.add_validated_from_var_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "artifact = curate.save_artifact(description=\"Alpert19\")"
    ]
   },
