--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -286,6 +286,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "curate.add_validated_from_var_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "artifact = curate.save_artifact(description=\"Oetjen18_t1\")"
    ]
   },
@@ -400,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "SmQmhrhigFPL",
