--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -166,6 +166,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "curate.add_validated_from_var_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "curate.add_new_from('sample')"
    ]
   },
