🚚 Replace ln.track() with ln.context.track()

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -56,9 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"hsPU1OENv0LS\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.context.uid = \"hsPU1OENv0LS0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
