--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -80,9 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"OWuTtS4SApon\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"OWuTtS4SApon0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
