--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -44,9 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"SmQmhrhigFPL\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"SmQmhrhigFPL0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
