--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -32,9 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"wukchS8V976U\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.context.uid = \"wukchS8V976U0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
