--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -25,9 +25,8 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.transform.stem_uid = \"zzJzdgJ763Dy\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.context.uid = \"zzJzdgJ763Dy0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
