--- a/docs/project-flow-scripts/hit-identification.ipynb
+++ b/docs/project-flow-scripts/hit-identification.ipynb
@@ -31,9 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"T0T28btuB0PG\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"T0T28btuB0PG0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
