--- a/docs/project-flow-scripts/integrated-analysis.ipynb
+++ b/docs/project-flow-scripts/integrated-analysis.ipynb
@@ -23,9 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"lB3IyPLQSmvt\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"lB3IyPLQSmvt0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
