--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -341,9 +341,8 @@
    "outputs": [],
    "source": [
     "# track the current notebook as transform\n",
-    "ln.settings.transform.stem_uid = \"1LCd8kco9lZU\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.context.uid = \"1LCd8kco9lZU0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
