--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -66,9 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"daeFs3PkquDW\"\n",
-    "ln.settings.transform.version = \"draft\"\n",
-    "ln.track()"
+    "ln.context.uid = \"daeFs3PkquDW0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
