--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -98,9 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"eNef4Arw8nNM\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.context.uid = \"eNef4Arw8nNM0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
