--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -115,9 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"s5V0dNMVwL9i\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.context.uid = \"s5V0dNMVwL9i0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
