--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -424,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We tracked pipeline and notebook runs through {class}`~docs:lamindb.core.run_context`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record as a global context.\n",
+    "We tracked pipeline and notebook runs through {meth}`~docs:lamindb.core.Core.track`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record within a global context.\n",
     "\n",
     "{class}`~lamindb.Artifact` objects are the inputs and outputs of runs. "
    ]
