--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.filter(description=\"anndata with obs\").one()\n",
+    "artifact = ln.Artifact.get(description=\"anndata with obs\")\n",
     "artifact.describe()"
    ]
   },
