--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.filter(description=\"Merged Bulk RNA counts\").one()"
+    "artifact = ln.Artifact.get(description=\"Merged Bulk RNA counts\")"
    ]
   },
   {
