--- a/docs/cell_marker.ipynb
+++ b/docs/cell_marker.ipynb
@@ -391,9 +391,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = bt.Source.filter(\n",
+    "source = bt.Source.get(\n",
     "    name=\"cellmarker\", version=\"2.0\", organism=\"human\"\n",
-    ").one()\n",
+    ")\n",
     "public = bt.CellMarker.public(source=source)\n",
     "public"
    ]
