--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -477,7 +477,7 @@
     "for _, row in celltypist_df.iterrows():\n",
     "    record = public_records_dict[row[\"ontology_id\"]]\n",
     "    if row[\"parent\"] is not None:\n",
-    "        parent_record = bt.CellType.filter(name=row[\"parent\"]).one()\n",
+    "        parent_record = bt.CellType.get(name=row[\"parent\"])\n",
     "        record.parents.add(parent_record)"
    ]
   },
