--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.filter(name=\"My versioned cytometry collection\").one()"
+    "collection_v1 = ln.Collection.get(name=\"My versioned cytometry collection\")"
    ]
   },
   {
