--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -44,9 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = ln.Collection.filter(\n",
+    "collection = ln.Collection.get(\n",
     "    name=\"My versioned cytometry collection\", version=\"2\"\n",
-    ").one()"
+    ")"
    ]
   },
   {
