--- a/docs/project-flow-scripts/hit-identification.ipynb
+++ b/docs/project-flow-scripts/hit-identification.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file = ln.Artifact.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()"
+    "input_file = ln.Artifact.get(key=\"schmidt22-crispra-gws-IFNG.csv\")"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ln.finish()"
+    "#ln.core.finish()"
    ]
   }
  ],
