--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
+    "artifact = ln.Artifact.get(description=\"hits from schmidt22 crispra GWS\")\n",
     "artifact.view_lineage()"
    ]
   },
@@ -286,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = ln.Artifact.filter(description=\"perturbseq counts\").one()\n",
+    "output_file = ln.Artifact.get(description=\"perturbseq counts\")\n",
     "output_file.view_lineage()"
    ]
   },
@@ -355,7 +355,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.filter(key__contains=\"figures/matrixplot\").one()\n",
+    "artifact = ln.Artifact.get(key__contains=\"figures/matrixplot\")\n",
     "artifact.cache()"
    ]
   },
