--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -598,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway = bt.Pathway.filter(ontology_id=\"GO:0035456\").one()\n",
+    "pathway = bt.Pathway.get(ontology_id=\"GO:0035456\")\n",
     "pathway"
    ]
   },
@@ -608,7 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degs = ln.FeatureSet.filter(pathways__ontology_id=pathway.ontology_id).one()"
+    "degs = ln.FeatureSet.get(pathways__ontology_id=pathway.ontology_id)"
    ]
   },
   {
