--- a/docs/project-flow-scripts/integrated-analysis.ipynb
+++ b/docs/project-flow-scripts/integrated-analysis.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# access the output files of bfx pipeline and previous analysis\n",
-    "file_ps = ln.Artifact.filter(description__icontains=\"perturbseq\").one()\n",
+    "file_ps = ln.Artifact.get(description__icontains=\"perturbseq\")\n",
     "adata = file_ps.load()\n",
     "adata"
    ]
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_hits = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
+    "file_hits = ln.Artifact.get(description=\"hits from schmidt22 crispra GWS\")\n",
     "screen_hits = file_hits.load()\n",
     "screen_hits"
    ]
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ln.finish()"
+    "#ln.core.finish()"
    ]
   }
  ],
