--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -135,7 +135,7 @@
     "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook:\n",
     "\n",
     "```\n",
-    "ln.finish()\n",
+    "ln.context.finish()\n",
     "```"
    ]
   },
