Curate to Curator

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "curate = ln.Curator.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
     "curate.validate()"
    ]
   },
