--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -80,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_mudata(\n",
+    "curate = ln.Curator.from_mudata(\n",
     "    mdata,\n",
     "    var_index={\n",
     "        \"rna\": bt.Gene.symbol, # gene expression\n",
