--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -147,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
+    "curate = ln.Curator.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
    ]
   },
   {
